# Spanda

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  package-lock.json  package.json
crates/: README.md
crates/spanda-api/: Cargo.toml  build.rs
crates/spanda-api/src/: admin_ops.rs  admin_users.rs  alert_channels.rs  auth_routes.rs  autonomy_ops.rs  control_center_extras.rs  control_center_ui.rs  correlation.rs  decision_ops.rs  e3.rs  e4.rs  entity_traceability.rs  governance_ops.rs  grpc.rs  grpc_policy.rs  handlers.rs  later_differentiation_ops.rs  lib.rs  mesh_ops.rs  openapi_routes.rs  persistence.rs  plugins.rs  recovery_ops.rs  recovery_plugins.rs  sdk_ops.rs  server.rs  smart_spaces.rs  smart_spaces_panels.rs  state.rs  twin_cloud.rs  version_info.rs  versioning.rs
crates/spanda-api/src/static/: control-center.html  oauth-oidc-callback.html  oauth-slack-callback.html  openapi.json
crates/spanda-api/tests/: admin_api_tests.rs  admin_oauth_tests.rs  admin_users_tests.rs  api_policy_tests.rs  auth_handler_tests.rs  config_approval_tests.rs  cross_interface_live.rs  decision_traces_api_tests.rs  device_api_tests.rs  entity_mutation_tests.rs  grpc_live_probe.rs  grpc_tests.rs  later_analytics_api_tests.rs  ota_execute_live.rs  pagerduty_webhook_test.rs  program_differentiation_api_tests.rs  recovery_api_tests.rs  rpc_gateway_tests.rs  slo_burn_scheduler_test.rs  tenant_persistence_tests.rs
crates/spanda-api/tests/common/: mod.rs
crates/spanda-autonomy/: Cargo.toml
crates/spanda-autonomy/src/: adaptive_recovery.rs  attention.rs  damage_risk.rs  entity.rs  episodic_store.rs  format.rs  fusion.rs  habituation.rs  homeostasis.rs  immunity.rs  lib.rs  live_sensors.rs  maintenance.rs  memory.rs  peripheral.rs  reflex.rs  registry.rs  runtime.rs  trace_buffer.rs  types.rs
crates/spanda-autonomy/tests/: bio_inspired.rs  cognitive_resilience_integration.rs
crates/spanda-capability/: Cargo.toml
crates/spanda-capability/src/: diagnostics.rs  health.rs  lib.rs  minimum.rs  registry.rs  robot.rs  traceability.rs
crates/spanda-capability/tests/: integration.rs  property_registry.rs
crates/spanda-chaos/: Cargo.toml
crates/spanda-chaos/src/: experiment.rs  lib.rs
crates/spanda-chaos/tests/: chaos_tests.rs
crates/spanda-connectivity/: Cargo.toml  README.md
crates/spanda-connectivity/src/: adapter_bridge.rs  lib.rs  runtime_sim.rs
crates/spanda-connectivity/tests/: catalog.rs
crates/spanda-contract/: Cargo.toml
crates/spanda-contract/src/: lib.rs  report.rs  verify.rs
crates/spanda-contract/tests/: contract_verify.rs
crates/spanda-decision/: Cargo.toml
crates/spanda-decision/src/: authority.rs  conflict.rs  consensus.rs  emit.rs  enforcement.rs  engine.rs  escalation.rs  escalation_store.rs  lib.rs  nonce_cache.rs  offline.rs  policy_cache.rs  report.rs  runtime_bridge.rs  security.rs  simulate.rs  trace.rs  trees.rs  types.rs
crates/spanda-decision/tests/: attack_simulations.rs  distributed.rs  rule_enforcement.rs  security_regression.rs  stable_gaps.rs
crates/spanda-deploy-http/: Cargo.toml  README.md
crates/spanda-deploy-http/src/: fleet_decision.rs  fleet_recovery.rs  lib.rs
crates/spanda-driver/: Cargo.toml
crates/spanda-driver/src/: compile.rs  debug_run.rs  debug_session.rs  deploy_plan.rs  lib.rs  native_run.rs  pipeline.rs  recovery_run.rs  replay.rs  run.rs  type_check.rs  verify.rs
crates/spanda-driver/tests/: pipeline_bench.rs  smoke.rs
crates/spanda-entity-mesh/: Cargo.toml  README.md
crates/spanda-entity-mesh/src/: delegation.rs  discovery.rs  election.rs  format.rs  heartbeat.rs  integration.rs  lib.rs  partition.rs  routing.rs  security.rs  sync.rs  transport_discovery.rs  types.rs
crates/spanda-entity-mesh/tests/: security_regression.rs
crates/spanda-generate/: Cargo.toml
crates/spanda-generate/src/: generate.rs  lib.rs  suggest.rs  validate.rs
crates/spanda-generate/tests/: generate_tests.rs
crates/spanda-governance/: Cargo.toml
crates/spanda-governance/src/: certification.rs  certification_store.rs  deployment_profile.rs  deployment_verify.rs  entity_governance.rs  human_accountability.rs  influence.rs  lib.rs  lookup.rs  policy.rs  policy_store.rs  report.rs  types.rs  validate.rs
crates/spanda-lexer/: Cargo.toml  README.md
crates/spanda-lexer/src/: lib.rs
crates/spanda-lexer/tests/: self_host_parity.rs
crates/spanda-modules/: Cargo.toml
crates/spanda-modules/src/: lib.rs
crates/spanda-ops/: Cargo.toml
crates/spanda-ops/src/: alerting.rs  lib.rs  otlp_traces.rs  pdf_report.rs  slack.rs
crates/spanda-package/: Cargo.toml
crates/spanda-package/src/: adapter.rs  adapter_verify.rs  category.rs  dependency.rs  error.rs  hardware_req.rs  import.rs  integrity.rs  lib.rs  lockfile.rs  manifest.rs  official.rs  project.rs  publish.rs  registry.rs  registry_fetch.rs  registry_remote.rs  registry_sign.rs  resolver.rs  safety.rs  tar_extract.rs  testing.rs  trust.rs  validation.rs  vendor.rs
crates/spanda-package/tests/: adapter_verify.rs  audit_packages.rs  hosted_registry.rs  integration.rs  lean_core_cycle.rs  lean_core_packages.rs  property_manifest.rs  security_regression.rs
crates/spanda-risk/: Cargo.toml
crates/spanda-risk/src/: lib.rs  mission_risk.rs
crates/spanda-risk/tests/: deployment_risk.rs
crates/spanda-sdk/: Cargo.toml  README.md  build.rs
crates/spanda-sdk/examples/: device_inventory.rs  entity_mesh.rs  readiness.rs
crates/spanda-sdk/src/: client.rs  error.rs  grpc.rs  lib.rs  stream.rs  types.rs
crates/spanda-sdk/src/grpc/: client.rs
crates/spanda-sdk/tests/: client_tests.rs
crates/spanda-twin-cloud/: Cargo.toml
crates/spanda-twin-cloud/src/: client.rs  config.rs  lib.rs  snapshot.rs  store.rs
crates/spanda-wasm/: Cargo.toml
crates/spanda-wasm/src/: lib.rs
sdk/python/: pyproject.toml
sdk/python/spanda/: __init__.py
sdk/python/spanda_sdk/: __init__.py  _grpc_proto.py  client.py  cognitive_clients.py  errors.py  governance_clients.py  grpc_client.py  stream.py
sdk/python/tests/: test_client.py  test_grpc_client.py
(+1572 files in other folders)
