[package]
name = "spanda-api"
version.workspace = true
edition = "2021"
description = "REST API v1 for Spanda Control Center — CLI parity gateway"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
spanda-audit = { path = "../spanda-audit" }
spanda-certify = { path = "../spanda-certify" }
spanda-compliance = { path = "../spanda-compliance" }
spanda-config = { path = "../spanda-config" }
spanda-decision = { path = "../spanda-decision" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
spanda-fleet = { path = "../spanda-fleet" }
spanda-graph = { path = "../spanda-graph" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-ops = { path = "../spanda-ops" }
spanda-ota = { path = "../spanda-ota" }
spanda-package = { path = "../spanda-package" }
spanda-policy = { path = "../spanda-policy" }
spanda-plugin = { path = "../spanda-plugin", default-features = false, features = ["api-host"] }
spanda-parser = { path = "../spanda-parser" }
spanda-assurance = { path = "../spanda-assurance" }
spanda-capability = { path = "../spanda-capability" }
spanda-chaos = { path = "../spanda-chaos" }
spanda-hardware = { path = "../spanda-hardware" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-recovery = { path = "../spanda-recovery" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-twin-cloud = { path = "../spanda-twin-cloud" }
spanda-trust = { path = "../spanda-trust" }
spanda-driver = { path = "../spanda-driver" }
spanda-interpreter = { path = "../spanda-interpreter" }
spanda-score = { path = "../spanda-score" }
spanda-risk = { path = "../spanda-risk" }
spanda-whatif = { path = "../spanda-whatif" }
spanda-security = { path = "../spanda-security" }
spanda-ast = { path = "../spanda-ast" }
spanda-telemetry-store = { path = "../spanda-telemetry-store" }
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
chrono = "0.4"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
rust-embed = "8"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
