[package]
name = "spanda-contract"
version.workspace = true
edition.workspace = true
description = "Mission contract static verification for Spanda programs"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-assurance = { path = "../spanda-assurance" }
spanda-readiness = { path = "../spanda-readiness" }

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
