[package]
name = "spanda-decision"
version.workspace = true
edition.workspace = true
description = "Decision audit trail parsing and reporting for Spanda mission traces"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-runtime = { path = "../spanda-runtime" }
