[package]
name = "spanda-decision"
version.workspace = true
edition.workspace = true
description = "Decision audit trail parsing and reporting for Spanda mission traces"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-capability = { path = "../spanda-capability" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-audit = { path = "../spanda-audit" }
spanda-config = { path = "../spanda-config" }
spanda-deploy-http = { path = "../spanda-deploy-http", optional = true }
spanda-governance = { path = "../spanda-governance" }

[features]
default = []
fleet-http = ["dep:spanda-deploy-http"]

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
tempfile = "3"
