[package]
name = "spanda-deploy-http"
version.workspace = true
edition.workspace = true
description = "Minimal HTTP/1.1 helpers for Spanda deploy and fleet agents"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
