[package]
name = "spanda-governance"
version.workspace = true
edition.workspace = true
description = "Operational governance framework — autonomy, deployment profiles, certification, risk, and compliance validation"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
spanda-audit = { path = "../spanda-audit" }
spanda-config = { path = "../spanda-config" }

[dev-dependencies]
serde_json = "1"
