[package]
name = "spanda-modules"
version.workspace = true
edition.workspace = true
description = "Spanda multi-file module loader and export registry"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
spanda-ast = { path = "../spanda-ast" }
spanda-error = { path = "../spanda-error" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
spanda-typecheck = { path = "../spanda-typecheck" }
