[package]
name = "spanda-ops"
version.workspace = true
edition = "2021"
description = "Enterprise operations — alerting and incident routing for Spanda Control Center"

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
spanda-audit = { path = "../spanda-audit" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
