[package]
name = "spanda-risk"
version.workspace = true
edition.workspace = true
description = "Mission deployment risk scoring for Spanda programs"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-assurance = { path = "../spanda-assurance" }
spanda-contract = { path = "../spanda-contract" }
spanda-hardware = { path = "../spanda-hardware" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-trust = { path = "../spanda-trust" }
spanda-whatif = { path = "../spanda-whatif" }

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
