[package]
name = "spanda-sdk"
version.workspace = true
edition = "2021"
description = "Official Rust SDK for Spanda Control Center API v1"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = "1"

[[example]]
name = "readiness"
path = "examples/readiness.rs"

[[example]]
name = "device_inventory"
path = "examples/device_inventory.rs"
