[package]
name = "spanda-twin-cloud"
version.workspace = true
edition.workspace = true
description = "Digital mission twin cloud sync — snapshot push/pull for Spanda Twin Cloud SaaS"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ureq = { version = "2", features = ["json"] }
spanda-readiness = { path = "../spanda-readiness" }
spanda-ast = { path = "../spanda-ast" }

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
